added gui config

--- a/linux/iptables_lab/Vagrantfile
+++ b/linux/iptables_lab/Vagrantfile
@@ -43,6 +43,7 @@ Vagrant.configure("2") do |config|
     db.vm.network "private_network", ip: "192.168.1.100", netmask: "255.255.255.0", hostname: true
     # delete default gw on eth0
     db.vm.provider :virtualbox do |vb|
+      vb.gui = true
       vb.memory = 1024
       vb.cpus = 2
     end
