--- a/linux/haproxy_lab/haproxy_met_stats.cfg
+++ b/linux/haproxy_lab/haproxy_met_stats.cfg
@@ -10,3 +10,11 @@ backend web-backend
   mode tcp
   server web1 172.28.128.11:80 check
   server web2 172.28.128.12:80 check
+
+frontend stats
+  bind *:8404
+  mode http
+  stats enable
+  stats uri /stats
+  stats refresh 10s
+  stats admin if LOCALHOST
