--- a/gcp/wordpress/wordpress_cloudsql.yaml
+++ b/gcp/wordpress/wordpress_cloudsql.yaml
@@ -37,17 +37,12 @@ spec:
           volumeMounts:
             - name: wordpress-persistent-storage
               mountPath: /var/www/html
-        # Change ${INSTANCE_CONNECTION_NAME} here to include your GCP
-        # project, the region of your Cloud SQL instance and the name
-        # of your Cloud SQL instance. The format is
-        # $PROJECT:$REGION:$INSTANCE
+        # verander ${INSTANCE_CONNECTION_NAME} naar $PROJECT:$REGION:$INSTANCE voor de mysql instance
+        # bv. wordpress-1-311815:us-central1:mysql-wordpress-instance
         - name: cloudsql-proxy
           image: gcr.io/cloudsql-docker/gce-proxy:1.11
           command: ["/cloud_sql_proxy",
                     "-instances=${INSTANCE_CONNECTION_NAME}=tcp:3306",
-                    # If running on a VPC, the Cloud SQL proxy can connect via Private IP. See:
-                    # https://cloud.google.com/sql/docs/mysql/private-ip for more info.
-                    # "-ip_address_types=PRIVATE",
                     "-credential_file=/secrets/cloudsql/key.json"]
           securityContext:
             runAsUser: 2  # non-root user
@@ -63,4 +58,3 @@ spec:
         - name: cloudsql-instance-credentials
           secret:
             secretName: cloudsql-instance-credentials
-:
